--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     },
     "jest": {
         "setupFilesAfterEnv": [
+            "jest-sorted",
             "jest-extended/all"
         ]
     }
