--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
     "name": "be-nc-news",
     "version": "1.0.0",
     "description": "bc-nc-news",
-    "main": "index.js",
+    "main": "listen.js",
     "scripts": {
         "setup-dbs": "psql -f ./db/setup.sql",
         "seed": "node ./db/seeds/run-seed.js",
         "test": "jest",
         "prepare": "husky install",
         "dev": "nodemon listen.js",
-        "playground": "psql -f playground.sql > playground-output.txt"
+        "playground": "psql -f playground.sql > playground-output.txt",
+        "start": "node listen.js",
+        "seed-prod": "NODE_ENV=production npm run seed"
     },
     "repository": {
         "type": "git",
@@ -28,14 +30,14 @@
         "jest-extended": "^2.0.0",
         "jest-sorted": "^1.0.14",
         "nodemon": "^2.0.22",
-        "pg-format": "^1.0.4",
         "supertest": "^6.3.3"
     },
     "dependencies": {
         "dotenv": "^16.0.0",
         "express": "^4.18.2",
         "pg": "^8.7.3",
-        "postgres": "^3.3.4"
+        "postgres": "^3.3.4",
+        "pg-format": "^1.0.4"
     },
     "jest": {
         "setupFilesAfterEnv": [
